--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,12 @@ jobs:
           steps:
             - run: npm install
             - run: npm test
+            - run:
+                name: "Run Jest and Collect Coverage Reports"
+                command: jest --collectCoverage=true
+            - store_artifacts:
+               path: Coverage
 workflows:
     build-and-test:
       jobs:
-        - build-and-test 
+        - build-and-test
